nobase_include_HEADERS = libnet.h \
                         libnet/libnet-asn1.h \
                         libnet/libnet-functions.h \
                         libnet/libnet-headers.h \
                         libnet/libnet-macros.h \
                         libnet/libnet-structures.h \
                         libnet/libnet-types.h

EXTRA_DIST = bpf.h gnuc.h ifaddrlist.h config.h
